# Xpilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  README_cn.md  docker-compose.yml  merge_nodes.py  pyproject.toml  requirements.txt  setup.py  start_chrome_with_proxy.sh  test
.github/workflows/: release.yml
config/: nodes.example.json  routing.example.json  routing.json  settings-isolated.example.json  settings.example.json
dev/: dev-proxy  dev-proxy-global  dev-proxy.sh  dev_proxy.py  isolated_proxy.py
tests/: proxy_access_check.py  test_config.py  test_health_checker.py  test_node_manager.py  test_proxy_access.py  test_routing_manager.py
xpilot/: __init__.py  auto_switch.py  cli.py  config.py  node_manager.py  proxy_manager.py  routing_manager.py  subscription.py  utils.py
xray_pilot/: __init__.py  cli.py  config.py  health_checker.py  node_manager.py  proxy_manager.py  routing_manager.py  subscription.py  utils.py
