[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpilot"
version = "0.1.0"
description = "A CLI proxy toolkit with xray backend"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "requests[socks]>=2.28",
    "pyyaml>=6.0",
]

[project.scripts]
xpilot = "xpilot.cli:cli"

[tool.setuptools.packages.find]
include = ["xpilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
